--- a/DXLAB Coworking Space Booking System/Properties/launchSettings.json
+++ b/DXLAB Coworking Space Booking System/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7101;http://localhost:5250",
+      "applicationUrl": "https://localhost:9999",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
