--- a/DxLabCoworkingSpace.Service/DxLabCoworkingSpace.Service.csproj
+++ b/DxLabCoworkingSpace.Service/DxLabCoworkingSpace.Service.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="9.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DxLabCoworkingSpace.Core\DxLabCoworkingSpace.Core.csproj" />
     <ProjectReference Include="..\DxLabCoworkingSpace.Infrastructure\DxLabCoworkingSpace.Infrastructure.csproj" />
   </ItemGroup>
