--- a/DXLAB Coworking Space Booking System/appsettings.Development.json
+++ b/DXLAB Coworking Space Booking System/appsettings.Development.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": { "DefaultConnection": "Server=(local);Database=DXLabSystem; uid = sa; pwd = 123" },
+  "ConnectionStrings": { "DefaultConnection": "Server=(local);Database=DXLabSystem; uid = sa; pwd = 123456An@" },
   "Jwt": {
     "Key": "fFSj4BhBLye/Lk3y1MvTI0qg1rQgRsJDsF7yd8V7FG4=",
     "Issuer": "https://localhost:7101/",
