--- a/DXLAB Coworking Space Booking System/appsettings.Development.json
+++ b/DXLAB Coworking Space Booking System/appsettings.Development.json
@@ -13,14 +13,14 @@
   },
 
   "Individual": {
-    "Title": "Loại Cá Nhân",
+    "Title": "Khu vực Cá Nhân",
     "Description": "Không gian riêng tư, yên tĩnh, phù hợp cho cá nhân học tập, nghiên cứu hoặc làm việc. Phòng trang bị đầy đủ máy tính cấu hình cao, Wi-Fi tốc độ cao, điều hòa, bàn ghế thoải mái",
     "Images": "images1.png"
   },
 
   "Group": {
-    "Title": "Loại Cá Nhân",
-    "Description": "Không gian riêng tư, yên tĩnh, phù hợp cho cá nhân học tập, nghiên cứu hoặc làm việc. Phòng trang bị đầy đủ máy tính cấu hình cao, Wi-Fi tốc độ cao, điều hòa, bàn ghế thoải mái",
+    "Title": "Khu vực Nhóm",
+    "Description": "Không gian riêng tư, yên tĩnh, phù hợp cho nhóm học tập, nghiên cứu hoặc làm việc. Phòng trang bị đầy đủ máy tính cấu hình cao, Wi-Fi tốc độ cao, điều hòa, bàn ghế thoải mái",
     "Images": "images1.png"
   }
 
