--- a/DxLabCoworkingSpace.Service/DxLabCoworkingSpace.Service.csproj
+++ b/DxLabCoworkingSpace.Service/DxLabCoworkingSpace.Service.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Extensions.Hosting" Version="2.3.0" />
+    <PackageReference Include="Hangfire.Core" Version="1.8.18" />
+    <PackageReference Include="Hangfire.MemoryStorage" Version="1.8.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="9.0.3" />
+    <PackageReference Include="Nethereum.Web3" Version="4.29.0" />
   </ItemGroup>
 
   <ItemGroup>
