--- a/DXLAB Coworking Space Booking System/appsettings.Development.json
+++ b/DXLAB Coworking Space Booking System/appsettings.Development.json
@@ -24,7 +24,9 @@
     "Images": "images1.png"
   },
   "Network": {
-    "ProviderUrl": "https://sepolia.infura.io/v3/027867a8ebd44bc192e7f7b33baf4b4e"
+    "provideURL": "https://sepolia.infura.io/v3/027867a8ebd44bc192e7f7b33baf4b4e",
+    "ProviderCrawl": "https://rpc.sepolia.linea.build"
+
   },
   "ContractAddresses": {
     "Sepolia": {
