--- a/DXLAB Coworking Space Booking System/appsettings.Development.json
+++ b/DXLAB Coworking Space Booking System/appsettings.Development.json
@@ -25,8 +25,8 @@
   },
   "Network": {
     "provideURL": "https://sepolia.infura.io/v3/027867a8ebd44bc192e7f7b33baf4b4e",
-    "ProviderCrawl": "https://rpc.sepolia.linea.build"
-
+    "ProviderCrawl": "https://sepolia.infura.io/v3/9d13fab540c243ca9514d4ab4fe7e9e1"
+    //"ProviderCrawl": "https://rpc.sepolia.linea.build"
   },
   "ContractAddresses": {
     "Sepolia": {
