--- a/DXLAB Coworking Space Booking System/appsettings.Development.json
+++ b/DXLAB Coworking Space Booking System/appsettings.Development.json
@@ -24,14 +24,14 @@
     "Images": "images1.png"
   },
   "Network": {
-    "provideURL": "https://sepolia.infura.io/v3/027867a8ebd44bc192e7f7b33baf4b4e",
-    "ProviderCrawl": "https://sepolia.infura.io/v3/9d13fab540c243ca9514d4ab4fe7e9e1"
+    "ProviderCrawl": "https://sepolia.infura.io/v3/027867a8ebd44bc192e7f7b33baf4b4e"//,
+    //"ProviderCrawl": "https://sepolia.infura.io/v3/9d13fab540c243ca9514d4ab4fe7e9e1"
     //"ProviderCrawl": "https://rpc.sepolia.linea.build"
   },
   "ContractAddresses": {
     "Sepolia": {
-      "FPTCurrency": "0xc6AA07Db2073a3cC9E76E0fC218d27EE15eb056d",
-      "LabBookingSystem": "0x80c0eA50195215a1cF03c9B2ebaef59cD15d346d"
+      "FPTCurrency": "0x08127cbA1764c192D9eF98dee249c73Eb8B9ac77",
+      "LabBookingSystem": "0x99452F38aCc0c67F424535c2DEf19467F1c7f9D4"
     }
   },
   "PrivateKeyBlockchain": {
