--- a/UnitTestCode/UnitTestCode.csproj
+++ b/UnitTestCode/UnitTestCode.csproj
@@ -6,4 +6,22 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.36" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
+    <PackageReference Include="xunit" Version="2.9.3" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="3.0.2">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DXLAB Coworking Space Booking System\DXLAB Coworking Space Booking System.csproj" />
+    <ProjectReference Include="..\DxLabCoworkingSpace.Core\DxLabCoworkingSpace.Core.csproj" />
+    <ProjectReference Include="..\DxLabCoworkingSpace.Infrastructure\DxLabCoworkingSpace.Infrastructure.csproj" />
+    <ProjectReference Include="..\DxLabCoworkingSpace.Service\DxLabCoworkingSpace.Service.csproj" />
+  </ItemGroup>
+
 </Project>
