--- a/JobService/appsettings.json
+++ b/JobService/appsettings.json
@@ -6,5 +6,22 @@
     }
   },
 
-  "APIJob": "https://localhost:9999/api/job/jobexpense"
+  "ExpenseJob": {
+    "APIJob": "https://localhost:9999/api/job/jobexpense",
+    "Start": "2000",
+    "End": "2100"
+  },
+
+
+  "DepreciationTH": {
+    "Start": "2000",
+    "End": "2100",
+    "APIDepreciationTH": "https://localhost:9999/api/depreciation"
+  },
+
+  "UltilizationRate": {
+    "Start": "2000",
+    "End": "2100",
+    "APIUltilizationRate": "https://localhost:9999/api/ultilizationrate"
+  }
 }
