--- a/DXLAB Coworking Space Booking System/appsettings.Development.json
+++ b/DXLAB Coworking Space Booking System/appsettings.Development.json
@@ -30,8 +30,8 @@
   },
   "ContractAddresses": {
     "Sepolia": {
-      "FPTCurrency": "0xBe755C318a0D5C6479971E717cb7ad3A1DC5F706",
-      "LabBookingSystem": "0xd0919367346fBb0AE6912dBeFa9e724C4Dd2c9CB"
+      "DXLABCoin": "0xc597d627a7E28B896d43a4eC50703f35Ba259378",
+      "Booking": "0xc6955E147Dc1596E1954629071C1Fe8184853020"
     }
   },
   "PrivateKeyBlockchain": {
