--- a/DxLabCoworkingSpace.Service/DxLabCoworkingSpace.Service.csproj
+++ b/DxLabCoworkingSpace.Service/DxLabCoworkingSpace.Service.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,14 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.0" />
     <PackageReference Include="Extensions.Hosting" Version="2.3.0" />
     <PackageReference Include="Hangfire.Core" Version="1.8.18" />
     <PackageReference Include="Hangfire.MemoryStorage" Version="1.8.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="9.0.3" />
     <PackageReference Include="Nethereum.Web3" Version="4.29.0" />
+	  <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="9.0.3" />
   </ItemGroup>
 
   <ItemGroup>
+	  
     <ProjectReference Include="..\DxLabCoworkingSpace.Core\DxLabCoworkingSpace.Core.csproj" />
     <ProjectReference Include="..\DxLabCoworkingSpace.Infrastructure\DxLabCoworkingSpace.Infrastructure.csproj" />
   </ItemGroup>
