--- a/DXLAB Coworking Space Booking System/DXLAB Coworking Space Booking System.csproj
+++ b/DXLAB Coworking Space Booking System/DXLAB Coworking Space Booking System.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -18,7 +18,6 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.35" />
     <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="9.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.35" />
-    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.36" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.35">
       <PrivateAssets>all</PrivateAssets>
@@ -40,13 +39,28 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\Images\67b12ffe-b2bb-403d-8ca0-f7e28ae94bbb_z6450732740014_2c3151e87a5567895ef1294ec193eabb.jpg" />
+    <Content Remove="wwwroot\Images\ea4d15e7-70f9-4756-b87a-816902ad2d9b_z6450732740014_2c3151e87a5567895ef1294ec193eabb.jpg" />
+    <Content Remove="wwwroot\Images\8ff098aa-1c0f-45f9-9b69-657a1292e0da_z6450732720169_bd255e61eb2c8e0b080043682d3e2f1a.jpg" />
+    <Content Remove="wwwroot\Images\6ef1fa2c-2101-4d0f-9a45-d06b22ddeea1_z6450732720169_bd255e61eb2c8e0b080043682d3e2f1a.jpg" />
+    <Content Remove="wwwroot\Images\3d8b2881-0691-4bed-b7a6-8190726ba67f_z6450732682680_d3104ce6dcb3072c4b158045d5339545.jpg" />
+    <Content Remove="wwwroot\Images\e011c0fc-7d04-4c30-b412-7850c77dc56e_CaNhanDxLab.jpg" />
+    <Content Remove="wwwroot\Images\d4feb590-c801-4b26-8b3d-cf91ce4db668_CaNhanDxLab.jpg" />
+    <Content Remove="wwwroot\Images\d7033a67-0484-4573-9d9f-ea7bdf383a17_z6450732755160_11d1283ff2d56560bd8c4934e4b431c0.jpg" />
+    <Content Remove="wwwroot\Images\36d90c4e-8f29-4fba-b040-29fdcea2667e_z6450732777054_d14047e5b6d57a199296eac171dbbae8.jpg" />
+    <Content Remove="wwwroot\Images\7490552d-7e3f-4775-9c5a-8bd81bf7342d.jpg" />
+    <Content Remove="wwwroot\Images\8b538461-7240-4cf5-a901-d2986065a9e8.jpg" />
+    <Content Remove="wwwroot\Images\b16348cd-c1a5-4203-aeb0-5f8cbb7f9669.jpg" />
+    <Content Remove="wwwroot\Images\f69e0c78-08ff-4418-acb2-db312949ec58.jpg" />
+  </ItemGroup>
+  <ItemGroup>
     <Content Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
+
   <ItemGroup>
-    <Folder Include="wwwroot\" />
     <Folder Include="wwwroot\Images\" />
   </ItemGroup>
 
