--- a/DxLabCoworkingSpace.Service/DxLabCoworkingSpace.Service.csproj
+++ b/DxLabCoworkingSpace.Service/DxLabCoworkingSpace.Service.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="9.0.3" />
     <PackageReference Include="Nethereum.Web3" Version="4.29.0" />
 	  <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="9.0.3" />
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
